--- a/pom.xml
+++ b/pom.xml
@@ -68,9 +68,9 @@
 			<version>2.7.0</version>
 		</dependency>
 		<dependency>
-			<groupId>io.springfox.ui</groupId>
-			<artifactId>springfox-swagger-ui-rfc6570</artifactId>
-			<version>1.0.0</version>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.7.0</version>
 		</dependency>
 		<!-- Swagger end -->
 
