init login path

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,8 +19,9 @@ security:
 #  instance:
 #    statusPageUrlPath: /index
 
-#logging:
-#  level:
-#    com.yong: DEBUG
+logging:
+  level:
+    com.yong: DEBUG
+    org.springframework.security: DEBUG
 
 
