--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,14 +12,6 @@ spring:
 security:
   headers:
     content-type: true
-#eureka:
-#  client:
-#    fetch-registry: false
-#    register-with-eureka: false
-#    serviceUrl:
-#      defaultZone: http://localhost:8761/eureka/
-#  instance:
-#    statusPageUrlPath: /index
 
 logging:
   level:
@@ -28,8 +20,9 @@ logging:
 
 yong:
   oauth:
-#如果为false, 任何url都不校验, 方便测试一些与Security无关的接口
-    enable: false
-  debug:
-#如果为true,在报错的时候,将报错信息直接塞到ResponseVO的data里面,方便查看
     enable: true
+    resource: yong
+  debug:
+    enable: true
+#如果为true,在报错的时候,将报错信息直接塞到ResponseVO的data里面,方便查看
+#如果为false, 任何url都不校验, 方便测试一些与Security无关的接口
