--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,31 @@
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
 target/
 !.mvn/wrapper/maven-wrapper.jar
 .mvn/
+.metadata/
+*.bak
 
 ### STS ###
 .apt_generated
@@ -12,10 +37,12 @@ target/
 
 ### IntelliJ IDEA ###
 .idea
+*.idea/
 *.iws
 *.iml
 *.ipr
-
+*.log
+*.project
 
 ### NetBeans ###
 nbproject/private/
@@ -24,3 +51,8 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
+config-repo/
+
+config-repo/
+*/rebel.xml
+*/.rebel.xml.bak
