--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
       name: yong-security
   data:
     mongodb:
-      uri: mongodb://139.199.189.64:32770/security
+      uri: mongodb://127.0.0.1:27017/security
       database: security
 security:
   headers:
@@ -17,7 +17,7 @@ security:
 logging:
   level:
     com.yong: DEBUG
-    org.springframework.security: INFO
+    org.springframework.security: DEBUG
 
 yong:
   oauth:
