--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,8 +6,7 @@ spring:
       name: yong-security
   data:
     mongodb:
-      uri: mongodb://139.199.189.64:32770/security
-#      uri: mongodb://127.0.0.1:27017/security
+      uri: mongodb://${yong.mongodb.uri}:27017/security
       database: security
 security:
   headers:
@@ -24,3 +23,5 @@ yong:
     resource: yong
   debug:
     enable: true
+  mongodb:
+    uri: mongodb
