upgrade to spring 2.1.7

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,12 +8,9 @@ spring:
 #          jwk-set-uri: http://localhost:8087/.well-known/jwks.json
   data:
     mongodb:
-      uri: mongodb://localhost:27017/test
+      uri: mongodb://localhost:27017/test?authSource=admin
       database: test
 
-security:
-  headers:
-    content-type: true
 
 logging:
   level:
