--- a/base-auth-demo/pom.xml
+++ b/base-auth-demo/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.2.RELEASE</version>
+		<version>2.5.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example.security</groupId>
 	<artifactId>base-auth-demo</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>base-auth-demo</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -38,7 +38,7 @@
 		<dependency>
 			<groupId>org.springframework.security.oauth.boot</groupId>
 			<artifactId>spring-security-oauth2-autoconfigure</artifactId>
-			<version>2.3.2.RELEASE</version>
+<!--			<version>2.3.2.RELEASE</version>-->
 		</dependency>
 
 	</dependencies>
