--- a/cart/src/main/resources/application.yaml
+++ b/cart/src/main/resources/application.yaml
@@ -1,5 +1,8 @@
 cart:
-  points-sink-url: http://localhost:8081
+#  points-sink-url: http://localhost:8081
+  points-sink-url: http://localhost:8081/ok
+#  points-sink-url: http://localhost:8081/timeout
+#  points-sink-url: http://localhost:8081/retry
   coffees:
     - Sumatra
     - Breakfast Blend
